#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.1       5-15-09
#############################################################################
 - NEW FEATURES
  * Disabled Typemap output by default, added --typemap flag to create typemap
    output if needed.
  * Enabled "Create APBS Input File" by default on the web server, so that 
    APBS calculation and visualization are more obvious to the users.
  * Added warnings to stderr and the REMARK field in the output PQR file 
    regarding multiple occupancy entries in PDB file.
  * Added more informative messages in REMARK field, explaining why PDB2PQR
    was unable to assign charges to certain atoms.
  * Updated structures.py, now PDB2PQR keeps the insertion codes from PDB 
    files.
  * Added "make test-long", which runs PDB2PQR on a long list (249) of PDBs
    by default, it is also possible to let it run on specified number of 
    PDBs, e.g.,  export TESTNUM=50; make test-long . 

 - BUG FIXES
  * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
    smashing problem in simple test on Ubuntu Linux with recent gcc versions.
  * Verbosity outputs should be stdouts, not stderrs in web server interface. 
    Corrected this in src/routines.py.
  * Fixed a bug in psize.py: for a pqr file with no ATOM entries but only 
    HETATM entries in it, inputgen.py should still create an APBS input file
    with reasonable grid lengths. 

#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.0       3-31-09
#############################################################################
 - NEW FEATURES
  * Updated html/master-index.html, deleted html/index.php.
  * Updated pydoc by running genpydoc.sh.
  * Added a whitespace option by by putting whitespaces between atom name
    and residue name, between x and y, and between y and z.
  * Added radius for Chlorine in ligff.py.